--- a/public/css/rev_dashboard.css
+++ b/public/css/rev_dashboard.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/montserrat");
+
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -38,9 +39,7 @@ h2 {
 h4,
 h6 {
   color: white;
-  -webkit-text-stroke: 1px black;
-  -webkit-background-clip: text;
-          background-clip: text;
+  text-shadow: #000 1px 0 10px;
 }
 
 lb {
@@ -58,6 +57,7 @@ ul {
   height: 75vh;
   display: flex;
 }
+
 ul li {
   background-color: #1E1F22;
   color: #fff;
@@ -71,6 +71,7 @@ ul li {
   align-items: center;
   gap: 1rem;
 }
+
 ul li .guild-wrapper {
   min-width: 8.5rem;
   gap: 0.5rem;
@@ -79,6 +80,7 @@ ul li .guild-wrapper {
   font-size: 0.9pc;
   align-items: center;
 }
+
 ul li .guild-wrapper a {
   text-decoration: none;
   font-weight: 600;
@@ -86,7 +88,10 @@ ul li .guild-wrapper a {
   width: max-content;
   color: black;
 }
-ul li .guild-wrapper a:hover, ul li .guild-wrapper a:active, ul li .guild-wrapper a:focus {
+
+ul li .guild-wrapper a:hover,
+ul li .guild-wrapper a:active,
+ul li .guild-wrapper a:focus {
   color: black;
 }
 
@@ -112,18 +117,22 @@ header {
   width: fit-content;
   padding: 0.25rem 0.75rem;
 }
+
 .user img {
   height: 4rem;
 }
+
 .user div {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 .user div h4 {
   font-size: larger;
   margin: 0 0;
 }
+
 .user div h6 {
   font-size: small;
   margin: 0 0;
@@ -132,16 +141,20 @@ header {
 img {
   aspect-ratio: 1;
 }
+
 img.round {
   border-radius: 100%;
 }
+
 img.guild-icon {
   height: 5rem;
 }
+
 img.bot-icon {
   height: 5rem;
   padding: 0 0.5rem;
 }
+
 img.user-icon {
   height: 4rem;
   margin-right: 0.5rem;
