--- a/public/css/rev_dashboard.css
+++ b/public/css/rev_dashboard.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.cdnfonts.com/css/montserrat");
-
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
@@ -19,14 +18,14 @@ h1 {
 }
 
 a:-moz-any-link.invite {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 
 a.invite,
 a:active.invite,
 a:any-link.invite {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -57,7 +56,6 @@ ul {
   height: 75vh;
   display: flex;
 }
-
 ul li {
   background-color: #1E1F22;
   color: #fff;
@@ -71,7 +69,6 @@ ul li {
   align-items: center;
   gap: 1rem;
 }
-
 ul li .guild-wrapper {
   min-width: 8.5rem;
   gap: 0.5rem;
@@ -80,19 +77,15 @@ ul li .guild-wrapper {
   font-size: 0.9pc;
   align-items: center;
 }
-
 ul li .guild-wrapper a {
   text-decoration: none;
-  font-weight: 600;
+  font-weight: 500;
   width: -moz-max-content;
   width: max-content;
-  color: black;
+  color: white;
 }
-
-ul li .guild-wrapper a:hover,
-ul li .guild-wrapper a:active,
-ul li .guild-wrapper a:focus {
-  color: black;
+ul li .guild-wrapper a:hover, ul li .guild-wrapper a:active, ul li .guild-wrapper a:focus {
+  color: white;
 }
 
 span,
@@ -117,22 +110,18 @@ header {
   width: fit-content;
   padding: 0.25rem 0.75rem;
 }
-
 .user img {
   height: 4rem;
 }
-
 .user div {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-
 .user div h4 {
   font-size: larger;
   margin: 0 0;
 }
-
 .user div h6 {
   font-size: small;
   margin: 0 0;
@@ -141,20 +130,16 @@ header {
 img {
   aspect-ratio: 1;
 }
-
 img.round {
   border-radius: 100%;
 }
-
 img.guild-icon {
   height: 5rem;
 }
-
 img.bot-icon {
   height: 5rem;
   padding: 0 0.5rem;
 }
-
 img.user-icon {
   height: 4rem;
   margin-right: 0.5rem;
