--- a/public/scss/rev_dashboard.scss
+++ b/public/scss/rev_dashboard.scss
@@ -64,6 +64,19 @@ ul {
     align-items: center;
     gap: 1rem;
 
+    a {
+      text-decoration: none;
+      font-weight: 500;
+      width: max-content;
+      color: white;
+
+      &:hover,
+      &:active,
+      &:focus {
+        color: white;
+      }
+    }
+
     .guild-wrapper {
       min-width: 8.5rem;
       gap: 0.5rem;
@@ -72,17 +85,10 @@ ul {
       font-size: 0.9pc;
       align-items: center;
 
-
-      a {
-        text-decoration: none;
-        font-weight: 500;
-        width: max-content;
-        color: white;
-        &:hover,
-        &:active,
-        &:focus {
-          color: white;
-        }
+      .guild-title {
+        display: flex;
+        flex-direction: row;
+        gap: 0.5rem;
       }
     }
   }
