--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,16 @@
   <script src="https://kit.fontawesome.com/ce9bc4dbd7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/rev_dashboard.css">
   <script type="module" src="js/update-uptime.js"></script>
+  <script>
+    function copyToClipboard(text) {
+      const input = document.createElement('input');
+      input.value = text;
+      document.body.appendChild(input);
+      input.select();
+      document.execCommand('copy');
+      document.body.removeChild(input);
+    }
+  </script>
 </head>
 
 <body>
@@ -37,9 +47,12 @@
     <% guilds.forEach((guild)=> { %>
     <li>
       <div class="guild-wrapper">
-        <a href=<%= invites[guild.id] %>>
-          <%= guild.name %>
-        </a>
+        <div class="guild-title">
+          <a href=<%= invites[guild.id] %>><i class="fa-solid fa-door-open"></i></a>
+          <span style="cursor: pointer;" onclick=copyToClipboard(<%= guild.id%>)>
+            <%= guild.name %>
+          </span>
+        </div>
         <img class="guild-icon round" src="<%=guild.iconURL()%>">
         <span>
           <%= guild.memberCount%> members
@@ -48,7 +61,7 @@
       <div class="chain-wrapper">
         <% if(chains.get(guild.id)) { %>
         <% const analytics = new analyzer(chains.get(guild.id)).getAnalytics()%>
-        <span><i class="fa-solid fa-link"></i>Analytics</span>
+        <a href="/chain?guildId=<%= guild.id%>"><i class="fa-solid fa-link"></i>Analytics</a>
         <span>Complexity: <b><%= analytics.complexityScore %></b></span>
         <span>Vocabulary: <b><%= analytics.words %></b></span>
         <span>Reply rate: <b><%= analytics.replyRate %></b></span>
