revamped analytics embed more formatting utils better frontend add GET /data endpoint for raw guild messages

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -52,7 +52,7 @@
                   { label: 'Complexity', value: analytics.complexityScore },
                   { label: 'Images', value: analytics.images },
                   { label: 'Reply rate', value: analytics.replyRate },
-                  { label: 'Size', value: chain.size }
+                  { label: 'Size', value: analytics.size }
                 ]; %>
               <% analyticsData.forEach(data => { %>
               <div class="flex flex-col text-nowrap items-start">
