--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -9,20 +9,26 @@
 </header>
 <hr class="my-4">
 <div class="m-4">
-  <header class="grid grid-flow-row">
-    <span class="text-sm">Uptime: <b id="uptime"
-          start="<%=startTime%>"></b></span>
-    <span class="text-sm">Currently part of <b><%=guilds.size%></b>
-      guilds</span>
+  <header class="flex justify-between">
+    <div class="grid grid-flow-row">
+      <span class="text-sm">Uptime: <b id="uptime"
+            start="<%=startTime%>"></b></span>
+      <span class="text-sm">Currently part of <b><%=guilds.size%></b>
+        guilds</span>
+    </div>
+    <div class="grid grid-flow-row">
+      <span class="text-sm">Chains memory usage:
+        <b><%=chainsMemUsage%></b></span>
+    </div>
   </header>
   <div class="flex flex-wrap justify-between">
     <ul
         class="list-none w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-2">
       <% guilds.forEach((guild) => { %>
       <li
-          class="bg-neutral p-2 rounded-md shadow-2xl flex flex-row items-center justify-between">
-        <div class="flex flex-col items-center gap-2">
-          <button class="btn btn-neutral text-xs overflow-clip"
+          class="bg-neutral p-2 rounded-md shadow-2xl flex flex-row items-center justify-around">
+        <div class="flex flex-col items-center h-full justify-start gap-2">
+          <button class="btn btn-neutral text-sm overflow-clip"
               onclick="copyToClipboard('<%=guild.id%>', 'Guild ID')">
             <%= guild.name %>
           </button>
@@ -40,12 +46,11 @@
         <div class="flex flex-col items-center">
           <a href="/chain?guildId=<%= guild.id %>"><i
                 class="fa-solid fa-link"></i>Analytics</a>
-          <div class="grid mt-2 grid-cols-2 space-x-8">
+          <div class="grid mt-2 grid-cols-2">
             <% const chain = chains.get(guild.id); %>
             <% if (chain) { %>
             <% const analytics = new MarkovChainAnalyzer(chain).getAnalytics() %>
-            <div class="grid grid-cols-2">
-              <% const analyticsData = [
+            <% const analyticsData = [
                   { label: 'Gifs', value: analytics.gifs },
                   { label: 'Vocabulary', value: analytics.words },
                   { label: 'Videos', value: analytics.videos },
@@ -54,22 +59,22 @@
                   { label: 'Reply rate', value: analytics.replyRate },
                   { label: 'Size', value: analytics.size }
                 ]; %>
-              <% analyticsData.forEach(data => { %>
-              <div class="flex flex-col text-nowrap items-start">
-                <span class="text-xs italic"><%= data.label %></span>
-                <b class="text-lg "><%= data.value %></b>
-              </div>
-              <% }); %>
+            <% analyticsData.forEach(data => { %>
+            <div class="flex flex-col text-nowrap items-start">
+              <span class="text-xs italic"><%= data.label %></span>
+              <b class="text-md "><%= data.value %></b>
             </div>
-            <% } else { %>
-            <i class="fa-solid fa-link-slash"></i>
-            <% } %>
+            <% }); %>
           </div>
+          <% } else { %>
+          <i class="fa-solid fa-link-slash"></i>
+          <% } %>
         </div>
-      </li>
-      <% }); %>
-    </ul>
   </div>
+  </li>
+  <% }); %>
+  </ul>
+</div>
 </div>
 
 <script type="module" src="js/update-uptime.js"></script>
