--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -9,6 +9,10 @@
   }
 
   .shadow-comic {
-    box-shadow: 10px 10px 0px -2px #000000;
+    box-shadow: 8px 8px 0px -2px rgba(0, 0, 0, 0.5);
+  }
+
+  .text-shadow-comic {
+    text-shadow: 8px 8px 2px rgba(0, 0, 0, 0.5);
   }
 }
