--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
 <body>
   <!-- <header> -->
-  <%- include("common/sidebar", { title }) -%>
+  <%- include("common/sidebar", { title, routes }) -%>
   <!-- </header> -->
   <main>
     <%- include(component, props) -%>
