--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 /* @tailwind variants; */
 
+[hidden] {
+  display: none !important;
+}
+
 @layer utilities {
   .shadow-around {
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
