--- a/views/pages/backoffice/broadcast.ejs
+++ b/views/pages/backoffice/broadcast.ejs
@@ -1,35 +1,117 @@
-<button onclick="deselectAll()" class="btn btn-primary w-min">Deselect all</button>
-<form hx-post="/broadcast" hx-trigger="submit" hx-swap="none" class="w-full">
-  <div class="grid grid-flow-col">
-    <ol class="grid grid-flow-row grid-cols-5 p-2 gap-2">
-      <% guilds.forEach((guild)=> { %>
-        <li title="<%= guild.name %>"
-          class="bg-base-300 w-full rounded-lg p-4 flex justify-start h-min items-center form-control">
+<div class="m-2">
+  <form hx-post="/broadcast" hx-trigger="submit" id="broadcast-form" hx-swap="none" class="w-full flex justify-around"
+    onsubmit="onFormSubmit()">
+    <div class="grid grid-flow-col">
+      <ol id="guilds" class="grid grid-flow-row grid-cols-7 gap-2">
+        <% guilds.forEach((guild)=> { %>
+        <li title="<%= guild.name %>" data-name="<%= guild.name %>"
+          class="bg-base-300 w-32 rounded-lg p-4 flex justify-start h-min items-center form-control">
           <span class="whitespace-nowrap overflow-hidden w-28 overflow-ellipsis">
             <%= guild.name %>
           </span>
           <div class="flex items-center h-min justify-start gap-2">
-            <input name="<%=guild.id%>" type="checkbox" class="toggle toggle-primary" checked />
+            <input name="<%=guild.id%>" type="checkbox" class="toggle toggle-primary guildcheckbox" />
             <img class="rounded-full w-12 shadow-around" src="<%=guild.iconURL() ?? 'assets/noimage.svg'%>"
               alt="Guild Icon">
           </div>
         </li>
         <% }); %>
-    </ol>
-    <div class="w-full max-w-sm form-control gap-4 p-2">
-      <div class="form-control gap-2">
-        <span class="label-text">Message</span>
-        <textarea type="text" placeholder="Message" class="textarea textarea-primary" name="msg"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Sumbit</button>
+      </ol>
     </div>
-  </div>
-</form>
+    <div class="flex flex-col sticky">
+      <span>Guilds: <b id="guilds-number"><%= guilds.size %></b></span>
+      <div class="flex flex-row py-4 items-end gap-2">
+        <label class="form-control w-fit">
+          <span class="label-text">Toggle select</span>
+          <button onclick="toggleSelection(this)" type="button" class="btn btn-accent btn-sm">
+            <i class="fa-regular fa-object-ungroup"></i>
+          </button>
+        </label>
+        <label class="form-control w-min relative z-[0]">
+          <span class="label-text">Search</span>
+          <div class="absolute top-6 left-3"><i class="fa-solid fa-magnifying-glass text-primary"></i></div>
+          <input type="text" class="input input-sm input-primary pl-8" oninput="searchGuild(this.value)"
+            id="guild-search" />
+        </label>
+      </div>
+      <div class="w-full max-w-sm form-control gap-4 p-2">
+        <div class="form-control gap-2">
+          <div class="flex items-center justify-between">
+            <span class="label-text">Keep after submit</span>
+            <input type="checkbox" id="do-keep-msg" class="toggle toggle-sm toggle-primary">
+          </div>
+          <textarea type="text" id="msg" placeholder="Message" class="textarea textarea-primary h-96"
+            name="msg"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Sumbit</button>
+      </div>
+    </div>
+  </form>
+</div>
 
 <script>
-  function deselectAll() {
-    document.querySelectorAll('input[type="checkbox"]').forEach((input) => {
-      input.checked = false;
+  function onFormSubmit() {
+    const form = document.getElementById("broadcast-form");
+    const msg = document.getElementById('msg')
+      .value;
+    if (!msg) {
+      showSnackbar(`Broadcast message is empty`, "alert-error");
+      return;
+    }
+    const formData = new FormData(form);
+    const guilds = Array.from(formData.keys())
+      .length - 1;
+    if (guilds <= 0) {
+      showSnackbar(`No guilds are selected`, "alert-error");
+      return;
+    }
+    showSnackbar(`Sent "${msg}" to ${guilds} guilds`, "alert-success");
+    // Reset textarea
+    if (!document.getElementById("do-keep-msg")
+      .checked) {
+      setTimeout(() => document.getElementById('msg')
+        .value = '')
+    }
+  }
+
+  function toggleSelection(btn) {
+    const doDeselect = btn.classList.contains('btn-accent');
+    const guilds = document.querySelectorAll(
+      'input.guildcheckbox[type="checkbox"]')
+    guilds.forEach((input) => {
+      input.checked = doDeselect;
     });
+    if (doDeselect) {
+      btn.classList.remove('btn-accent');
+      btn.classList.add('btn-primary');
+    } else {
+      btn.classList.remove('btn-primary');
+      btn.classList.add('btn-accent');
+    }
   }
 </script>
+<script>
+  function searchGuild(searchText) {
+    const elements = document.getElementById('guilds')
+      .children;
+    updateList(searchText.toUpperCase(), elements);
+  }
+
+  function updateList(
+    searchText,
+    elements,
+    searchAttr = 'data-name'
+  ) {
+    for (const element of elements) {
+      if (searchText === '') {
+        element.hidden = false;
+        continue;
+      }
+      const searchable = element.getAttribute(searchAttr).toUpperCase();
+      element.hidden = !searchable?.includes(searchText);
+    }
+    document.getElementById('guilds-number').innerText = Array.from(elements)
+      .reduce((v, e) => v + Number(!e.hidden) ?? 0, 0)
+  }
+</script>
+<script src="js/showSnackbar.js"></script>
